Added the Users and Reviews collections.
